# a2lfile

./: .gitignore  Cargo.toml  Changelog.md  README.md
.github/workflows/: coverage.yml  rust.yml  test.yml
a2lfile/: Cargo.toml  README.md
a2lfile/src/: a2ml.rs  checker.rs  cleanup.rs  ifdata.rs  itemlist.rs  lib.rs  loader.rs  merge.rs  module.rs  namemap.rs  parser.rs  sort.rs  specification.rs  specification_orig.rs  tokenizer.rs  writer.rs
a2lfile/src/cleanup/: compu_methods.rs  functions.rs  groups.rs  record_layouts.rs
a2lfile/tests/: test.rs
a2lmacros/: Cargo.toml
a2lmacros/src/: a2lspec.rs  a2mlspec.rs  codegenerator.rs  lib.rs  util.rs
a2lmacros/src/codegenerator/: data_structure.rs  ifdata_parser.rs  ifdata_writer.rs  parser.rs  writer.rs
src/: a2lloader.rs  a2lparser.rs  a2lspecification.rs  a2ltokenizer.rs  a2lwriter.rs  a2ml.rs  checker.rs  cleanup.rs  ifdata.rs  lib.rs  loader.rs  merge.rs  namemap.rs  parser.rs  sort.rs  specification.rs  tokenizer.rs  writer.rs
src/cleanup/: compu_methods.rs  functions.rs  groups.rs  record_layouts.rs
tests/: test.rs
