[package]
name = "a2lfile"
version = "1.3.0"
authors = ["Daniel Thaler <daniel@dthaler.de>"]
edition = "2021"
description = "read, modify and write a2l files"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["a2l", "file", "file-format", "ASAM-MCD-2MC"]
categories = ["parser-implementations"]
repository = "https://github.com/DanielT/a2lfile"

[workspace]
members = ["a2lmacros"]

[dependencies.a2lmacros]
path = "a2lmacros"
version = "1.1.0"

[dependencies]

