[package]
name = "a2lfile"
version = "2.4.0"
authors = ["Daniel Thaler <daniel@dthaler.de>"]
edition = "2021"
description = "read, modify and write a2l files"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["a2l", "file", "file-format", "ASAM-MCD-2MC"]
categories = ["parser-implementations"]
repository = "https://github.com/DanielT/a2lfile"

[features]
default = ["check", "cleanup", "ifdata_cleanup", "merge", "sort"]
check = []
cleanup = []
ifdata_cleanup = []
merge = []
sort = []

[dependencies.a2lmacros]
version = "2.2.0"

[dependencies]
fnv = "1.0.7"
num-traits = "0.2.19"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.8"
